fixed alignment issues on mobile site:

--- a/css/style.css
+++ b/css/style.css
@@ -344,6 +344,7 @@ button:hover {
     }
 
     .page-title {
+        width: 90%;
         font-size: 30px;
     }
 
